// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search reducer should handle END_SEARCH 1`] = `
Object {
  "byId": Object {},
  "items": Array [],
  "loaded": true,
  "offset": 0,
  "pattern": "test",
  "total": 0,
  "type": "END_SEARCH",
}
`;

exports[`search reducer should handle START_SEARCH 1`] = `
Object {
  "active": true,
  "items": Array [],
  "loaded": false,
  "pattern": "test",
  "type": "START_SEARCH",
}
`;

exports[`search reducer should return the initial state 1`] = `
Object {
  "byId": Object {},
  "items": Array [],
  "loaded": false,
  "total": 0,
}
`;
